--- a/src/styles/css_battle_1.css
+++ b/src/styles/css_battle_1.css
@@ -1,48 +1,100 @@
-/* body {
-  background: #f5d6b4;
-  display: grid;
-  place-items: center;
-  height: 100vh;
-  margin: 0;
-}
+.css-battle-1-wrapper {
+    background: #f5d6b4;
+    display: grid;
+    place-items: center;
+    height: 300px; 
+    width: 400px; 
+  }
+  
+  .css-battle-1-wrapper p {
+    position: absolute;
+    width: 20px;
+    height: 20px;
+    background: #d86f45;
+    border-radius: 50%;
+    transform: translate(-110px, 0); 
+    box-shadow: 80px 0px #d86f45;
+  }
+  
+  .css-battle-1-wrapper div {
+    position: absolute;
+    border: 20px solid #d86f45;
+    border-top: none;
+    border-radius: 0 0 100px 100px;
+  }
+  
+  #inner {
+    width: 40px;
+    height: 22px;
+    transform: rotate(180deg) translate(0px, -19px);
+  }
+  
+  #two {
+    width: 80px;
+    height: 40px;
+    transform: translate(-20px, 30px);
+  }
+  
+  #three {
+    width: 120px;
+    height: 60px;
+    transform: rotate(180deg) translate(0px, -40px);
+  }
+  
+  #outer {
+    width: 160px;
+    height: 80px;
+    transform: translate(-20px, 50px);
+  }
 
-p {
-  position: absolute;
-  width: 20px;
-  height: 20px;
-  background: #d86f45;
-  border-radius: 50%;
-  transform: translate(-110px, 0);
-  box-shadow: 80px 0px #d86f45;
-}
+  /* BATTLE ARENA CSS */
 
-div {
-  position: absolute;
-  border: 20px solid #d86f45;
-  border-top: none;
-  border-radius: 0 0 100px 100px;
-}
+/* 
+  div id="inner"> </div> 
+  <div id="two"> </div> 
+  <div id="three"> </div> 
+  <div id="outer"> </div> 
+  <p> </p> */
 
-#inner {
-  width: 40px;
-  height: 22px;
-  transform: rotate(180deg) translate(0px, -19px);
-}
-
-#two {
-  width: 80px;
-  height: 40px;
-  transform: translate(-20px, 30px);
-}
-
-#three {
-  width: 120px;
-  height: 60px;
-  transform: rotate(180deg) translate(0px, -40px);
-}
-
-#outer {
-  width: 160px;
-  height: 80px;
-  transform: translate(-20px, 50px);
-} */
+  /* body {
+    background: #f5d6b4;
+    display: grid;
+    place-items: center;
+  }
+  p {
+    position: absolute;
+    width: 20px;
+    height: 20px;
+    background: #d86f45;
+    border-radius: 50px;
+    translate: -110px;
+    box-shadow: 80px 0px #d86f45;
+  }
+  div {
+    position: absolute;
+    border: 20px solid #d86f45;
+    border-top: none;
+    border-radius: 0px 0px 100px 100px;
+  }
+  #inner {
+    width: 40px;
+    height: 22px;
+    rotate: 180deg;
+    translate: 0px -19px;
+  }
+  #two {
+    width: 80px;
+    height: 40px;
+    translate: -20px 30px;
+  }
+  #three {
+    width: 120px;
+    height: 60px;
+    rotate: 180deg;
+    translate: 0px -40px;
+  }
+  #outer {
+    width: 160px;
+    height: 80px;
+    translate: -20px 50px;
+  } */
