--- a/src/styles/css_battle_2.css
+++ b/src/styles/css_battle_2.css
@@ -1,4 +1,59 @@
- /* body{
+.parent {
+    margin:0;
+    padding:0;
+    background:#3F4869;
+    width: 400px;
+    height: 300px;
+    display:flex;
+    justify-content:center;
+    align-items:center;
+    position:relative;
+}
+
+.yellow {
+    width: 190px;
+    height: 180px;
+    background: #F4DA64;
+    border-radius:50%;
+    position:relative;
+    z-index:2;
+    left:-50px;
+    top:12
+}
+  
+.pink {
+    width: 190px;
+    height: 180px;
+    border-radius:50%;
+    background: #E25C57;
+    position:absolute;
+    top:8px;
+    right:-50px;
+    z-index:1;
+}
+
+.extra {
+    width: 90px;
+    height: 90px;
+    background: #E25C57;
+    position:absolute;
+    left: 55px;
+    top: 8px;
+    z-index:3;
+    rotate:90deg;
+    border-radius:0 0px 0px 90px
+}
+
+/* Battle Arena CSS */
+
+/* 
+<div class="parent">
+  <div class="yellow"></div>
+  <div class="pink"></div>
+  <div class="extra"></div>
+</div>
+<style>
+  body{
     margin:0;
     padding:0;
     background:#3F4869;
@@ -41,4 +96,5 @@
     z-index:3;
     rotate:90deg;
     border-radius:0 0px 0px 90px
-  } */
+  }
+</style> */
