--- a/src/styles/css_battle_2.css
+++ b/src/styles/css_battle_2.css
@@ -1,47 +1,46 @@
 .parent {
-    margin:0;
-    padding:0;
-    background:#3F4869;
-    width: 400px;
-    height: 300px;
-    display:flex;
-    justify-content:center;
-    align-items:center;
-    position:relative;
+  margin: 0;
+  padding: 0;
+  background: #3F4869;
+  width: 400px;
+  height: 300px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
 }
 
 .yellow {
-    width: 190px;
-    height: 180px;
-    background: #F4DA64;
-    border-radius:50%;
-    position:relative;
-    z-index:2;
-    left:-50px;
-    top:12
+  width: 190px;
+  height: 180px;
+  background: #F4DA64;
+  border-radius: 50%;
+  position: relative;
+  z-index: 2;
+  left: -50px;
 }
   
 .pink {
-    width: 190px;
-    height: 180px;
-    border-radius:50%;
-    background: #E25C57;
-    position:absolute;
-    top:8px;
-    right:-50px;
-    z-index:1;
+  width: 190px;
+  height: 180px;
+  border-radius: 50%;
+  background: #E25C57;
+  position: absolute;
+  top: 58px;
+  right: 32px;
+  z-index: 1;
 }
 
 .extra {
     width: 90px;
     height: 90px;
     background: #E25C57;
-    position:absolute;
-    left: 55px;
-    top: 8px;
-    z-index:3;
-    rotate:90deg;
-    border-radius:0 0px 0px 90px
+    position: absolute;
+    left: 174px;
+    top: 61px;
+    z-index: 3;
+    rotate: 90deg;
+    border-radius: 0 0px 0px 90px;
 }
 
 /* Battle Arena CSS */
